Adjust main image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2643,7 +2643,8 @@ input, select, textarea {
 			}
 
 			.image.main img {
-				width: 100%;
+				width: 50%;
+				margin-left: 200px;
 			}
 
 		@media screen and (max-width: 736px) {
